<resources>
    <string name="app_name">BBCNews</string>

    <string name="bbcnews_menu">BBCNews</string>
    <string name="ted_menu">TED</string>
    <string name="daily_sentence_menu">DailySentence</string>
    <string name="feedback_menu">Feedback</string>
    <string name="setting_menu">Setting</string>
    <string name="exit_menu">Exit</string>
    <string name="other_menu">Other</string>

    <string name="tv_tab_main">主页</string>
    <string name="tv_tab_dis">发现</string>
    <string name="tv_tab_news">消息</string>

    <!--behaviour-->
    <string name="nestedscrollview_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
